# Skia_LibCMaker

./: README.md  cmr_build_skia.cmake
.github/workflows/: LibCMaker_CI.yml
ci/: ci_install_packages.sh  ci_lib_params.sh
cmake/: SkiaConfig.cmake  SkiaConfig.in.cmake  cmr_build_rules_skia.cmake  cmr_get_download_params_skia.cmake  update_Skia.cmake
cmake/source/: .gitignore  skia-m98.tar.xz
cmake/source/patch/skia-m98/: GN__Android_iOS__Do_not_build__skia_c_api_example.patch  GN__Windows__Fix_MSVC_x86_build.patch  GN__Windows__Fix_link_deps.patch  GN__export_icu_from_skia.patch  GN__iOS__Fix_link_deps.patch  Src__Fix_for__skia_enable_sksl.patch  Src__Fix_for__skia_use_sfntly.patch  Src__Windows__Fix_MSVC_shared_build.patch  Tools__Add_depth-1_to_git-clone_for_deps.patch
patch/skia-m98/: GN__Not_-fvisibility_hidden.patch
samples/ci_sample/: CMakeLists.txt  README.md
samples/ci_sample/src/: FileUtil.cpp  FileUtil.h  example.cpp  example_test.cpp  example_test_icu.cpp  example_test_skia.cpp
samples/ci_sample/test/: CMakeLists.txt
